linked the nav bars

--- a/index.html
+++ b/index.html
@@ -7,28 +7,28 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="home">
+    <div class="home" id="home">
         <nav>
             <ul>
-                <a href=""><li>Intro</li></a>
-                <a href=""><li>Features</li></a>
-                <a href=""><li>About</li></a>
+                <a href="#home"><li>Intro</li></a>
+                <a href="#features-section"><li>Features</li></a>
+                <a href="#about"><li>About</li></a>
             </ul>
         </nav>
         <nav id="nav">
             <ul>
-                <a href=""><li>Intro</li></a>
-                <a href=""><li>Features</li></a>
-                <a href=""><li>About</li></a>
+                <a href="#home"><li>Intro</li></a>
+                <a href="#features-section"><li>Features</li></a>
+                <a href="#about"><li>About</li></a>
             </ul>
         </nav>
-        <div class="intro">
+        <div class="intro" id="intro">
             <h1>Weather app</h1>
             <h2>An app that gets the weather conditions</h2>
             <a href="WEATHER_APP"><button>Check out the weather app</button></a>
         </div>
     </div> 
-    <div class="features-section">
+    <div class="features-section" id="features-section">
         <h1 style="text-align: center;">Features</h1>
         <div class="features">
             <div class="feature">
@@ -48,7 +48,7 @@
             </div>
         </div>
     </div>
-    <div class="about">
+    <div class="about" id="about">
         <h1 style="text-align: center; margin-bottom: 2vh;">About</h1>
         <h1>THIS PROJECT WAS INSPIRED by Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas fuga earum dignissimos veniam qui maxime ullam expedita velit vitae nesciunt?</h1><br>
         <h1>Timeline: 2 weeks as required for a Portfolio Project for <a href="HOLBERTON WEBSITE">Holberton School</a></h1><br><br>
