modified some contents in About section

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             </ul>
         </nav>
         <div class="intro" id="intro">
-            <h1>Weather app</h1>
-            <h2>An app that gets the weather conditions</h2>
+            <h1>Demo app</h1>
+            <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt aperiam accusamus laborum!</h2>
             <a href="WEATHER_APP"><button>Check out the weather app</button></a>
         </div>
     </div> 
@@ -51,7 +51,7 @@
     <div class="about" id="about">
         <h1 style="text-align: center; margin-bottom: 2vh;">About</h1>
         <h1>THIS PROJECT WAS INSPIRED by Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas fuga earum dignissimos veniam qui maxime ullam expedita velit vitae nesciunt?</h1><br>
-        <h1>Timeline: 2 weeks as required for a Portfolio Project for <a href="HOLBERTON WEBSITE">Holberton School</a></h1><br><br>
+        <h1>Timeline:</h1><br><br>
         <h1>LinkedIn: </h1>
         <h1>GitHub: </h1>
         <h1>Twitter: </h1>
