modified the html content of .intro button

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="intro" id="intro">
             <h1>Demo app</h1>
             <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt aperiam accusamus laborum!</h2>
-            <a href="WEATHER_APP"><button>Check out the weather app</button></a>
+            <a href="WEATHER_APP"><button>Check out the Demo app</button></a>
         </div>
     </div> 
     <div class="features-section" id="features-section">
